# lektor-i18n-plugin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  lektor_i18n.py  pyproject.toml
.github/workflows/: ci.yml
